--- a/index.ipynb
+++ b/index.ipynb
@@ -223,11 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = "
+    "email = \"art.vandelay@vandelay.co\""
    ]
   },
   {
